@@ -1,17 +1,19 @@
 package com.restaurant.cassy.restaurant_api.service;
 
-import com.restaurant.cassy.restaurant_api.dto.*;
+import com.restaurant.cassy.restaurant_api.dto.CostResponseDto;
+import com.restaurant.cassy.restaurant_api.dto.DishResponseDto;
+import com.restaurant.cassy.restaurant_api.dto.IngredientResponseDto;
+import com.restaurant.cassy.restaurant_api.dto.MarginResponseDto;
 import com.restaurant.cassy.restaurant_api.entity.Dish;
 import com.restaurant.cassy.restaurant_api.entity.Ingredient;
 import com.restaurant.cassy.restaurant_api.repository.DishRepository;
 import com.restaurant.cassy.restaurant_api.repository.IngredientRepository;
+import org.springframework.stereotype.Service;
 
-import java.sql.SQLException;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
+@Service
 public class DishService {
 
     private final DishRepository dishRepository;
@@ -23,50 +25,41 @@ public class DishService {
         this.ingredientRepository = ingredientRepository;
     }
 
-    private DishResponseDto toDto(Dish dish) {
-        List<IngredientResponseDto> ingredientDtos = new ArrayList<>();
-        if (dish.getIngredients() != null) {
-            for (Ingredient i : dish.getIngredients()) {
-                ingredientDtos.add(new IngredientResponseDto(
-                        i.getId(),
-                        i.getName(),
-                        i.getCategory(),
-                        i.getSellingPrice()
-                ));
-            }
-        }
-        return new DishResponseDto(
-                dish.getId(),
-                dish.getName(),
-                dish.getSellingPrice(),
-                ingredientDtos
-        );
+    public List<DishResponseDto> findAll() {
+        return dishRepository.findAll()
+                .stream()
+                .map(this::toDto)
+                .toList();
     }
 
-    public List<DishResponseDto> findAll() throws SQLException {
-        List<Dish> dishes = dishRepository.findAll();
-        return dishes.stream().map(this::toDto).collect(Collectors.toList());
+    public Optional<DishResponseDto> findById(Integer id) {
+        return dishRepository.findById(id).map(this::toDto);
     }
 
-    public Optional<DishResponseDto> findById(Integer id) throws SQLException {
-        Optional<Dish> dish = dishRepository.findById(id);
-        return dish.map(this::toDto);
+    public List<DishResponseDto> findByIngredientName(String ingredientName) {
+        return dishRepository.findByIngredientName(ingredientName)
+                .stream()
+                .map(this::toDto)
+                .toList();
     }
 
-    public DishResponseDto updateIngredients(Integer dishId, List<Ingredient> requested) throws SQLException {
-        Optional<Dish> optionalDish = dishRepository.findById(dishId);
-        Dish dish = optionalDish.orElseThrow(() -> new RuntimeException("NOT_FOUND"));
+    public DishResponseDto updateIngredients(Integer dishId, List<Ingredient> requested) {
+        Dish dish = dishRepository.findById(dishId)
+                .orElseThrow(() -> new RuntimeException("NOT_FOUND"));
 
-        List<Integer> ids = requested.stream().map(Ingredient::getId).collect(Collectors.toList());
-        List<Ingredient> validIngredients = ingredientRepository.findAllByIds(ids);
+        List<Integer> ids = requested.stream()
+                .map(Ingredient::getId)
+                .toList();
+
+        List<Ingredient> validIngredients = ingredientRepository.findByIds(ids);
         dish.setIngredients(validIngredients);
 
-        dishRepository.save(dish);
-        return toDto(dish);
+        return toDto(dishRepository.save(dish));
     }
 
-    public DishResponseDto saveDish(Dish dishToSave) throws SQLException {
+    public DishResponseDto saveDish(Dish dishToSave) {
         Dish dish;
+
         if (dishToSave.getId() != null) {
             dish = dishRepository.findById(dishToSave.getId())
                     .orElseThrow(() -> new RuntimeException("NOT_FOUND"));
@@ -81,69 +74,60 @@ public class DishService {
         }
 
         if (dishToSave.getIngredients() != null) {
-            List<Integer> ids = dishToSave.getIngredients().stream()
+            List<Integer> ids = dishToSave.getIngredients()
+                    .stream()
                     .map(Ingredient::getId)
-                    .collect(Collectors.toList());
-            dish.setIngredients(ingredientRepository.findAllByIds(ids));
+                    .filter(id -> id != null)
+                    .toList();
+            List<Ingredient> validIngredients = ingredientRepository.findByIds(ids);
+            dish.setIngredients(validIngredients);
         }
 
-        dishRepository.save(dish);
-        return toDto(dish);
+        return toDto(dishRepository.save(dish));
     }
 
-    public List<DishResponseDto> findByIngredientName(String ingredientName) throws SQLException {
-        List<Dish> dishes = dishRepository.findByIngredientName(ingredientName);
-        return dishes.stream().map(this::toDto).collect(Collectors.toList());
-    }
-
-    public CostResponseDto getDishCost(Integer id) throws SQLException {
+    public CostResponseDto getDishCost(Integer id) {
         Dish dish = dishRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("NOT_FOUND"));
         return new CostResponseDto(dish.getName(), dish.getDishCost());
     }
 
-    public MarginResponseDto getGrossMargin(Integer id) throws SQLException {
+    public MarginResponseDto getGrossMargin(Integer id) {
         Dish dish = dishRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("NOT_FOUND"));
-
-        Double margin;
         try {
-            margin = dish.getGrossMargin();
+            Double margin = dish.getGrossMargin();
+            return new MarginResponseDto(
+                    dish.getName(),
+                    dish.getSellingPrice(),
+                    dish.getDishCost(),
+                    margin
+            );
         } catch (RuntimeException e) {
             if ("SELLING_PRICE_NULL".equals(e.getMessage())) {
                 throw new RuntimeException("SELLING_PRICE_NULL");
             }
             throw e;
         }
+    }
 
-        return new MarginResponseDto(
+    private DishResponseDto toDto(Dish dish) {
+        List<IngredientResponseDto> ingredientDtos = dish.getIngredients() == null
+                ? List.of()
+                : dish.getIngredients().stream()
+                .map(i -> new IngredientResponseDto(
+                        i.getId(),
+                        i.getName(),
+                        i.getCategory(),
+                        i.getSellingPrice()
+                ))
+                .toList();
+
+        return new DishResponseDto(
+                dish.getId(),
                 dish.getName(),
                 dish.getSellingPrice(),
-                dish.getDishCost(),
-                margin
+                ingredientDtos
         );
-    }
-
-    public List<DishResponseDto> createDishes(List<DishCreateDto> dishDtos) throws SQLException {
-        List<DishResponseDto> created = new ArrayList<>();
-        for (DishCreateDto dto : dishDtos) {
-            if (dishRepository.findByName(dto.getName()).isPresent()) {
-                throw new RuntimeException("Dish.name=" + dto.getName() + " already exists");
-            }
-
-            Dish dish = new Dish();
-            dish.setName(dto.getName());
-            dish.setDishType(dto.getDishType());
-            dish.setSellingPrice(dto.getSellingPrice());
-
-            Dish saved = dishRepository.save(dish);
-            created.add(toDto(saved));
-        }
-        return created;
-    }
-
-    public List<DishResponseDto> getDishesFiltered(Double priceOver, Double priceUnder, String name) throws SQLException {
-        List<Dish> dishes = dishRepository.findFiltered(priceOver, priceUnder, name);
-        return dishes.stream().map(this::toDto).collect(Collectors.toList());
     }
 }
